--- a/packages/core/i18n/nls.fr.json
+++ b/packages/core/i18n/nls.fr.json
@@ -178,15 +178,7 @@
       "clearAll": "Effacer tout",
       "noProblems": "Aucun problème n'a été détecté dans l'espace de travail jusqu'à présent.",
       "tabbarDecorationsEnabled": "Afficher les décorateurs de problèmes (marqueurs de diagnostic) dans les barres d'onglets.",
-      "showErrors": "Afficher les erreurs",
-      "showWarnings": "Afficher les avertissements",
-      "showInfos": "Afficher les informations",
-      "showHints": "Montrer indices",
-      "activeFile": "Afficher uniquement le fichier actif",
-      "useFilesExclude": "Masquer les fichiers exclus",
-      "moreFilters": "Plus de filtres...",
-      "showingFilteredProblems": "Affichage de {0} sur {1}",
-      "filterPlaceholder": "Filtre (par exemple texte, **/*.ts, !**/node_modules/**)"
+      "showHints": "Montrer indices"
     },
     "memory-inspector": {
       "addressTooltip": "Emplacement de mémoire à afficher, une adresse ou une expression évaluant une adresse.",
