--- a/packages/core/i18n/nls.hu.json
+++ b/packages/core/i18n/nls.hu.json
@@ -178,15 +178,7 @@
       "clearAll": "Mindent törölni",
       "noProblems": "A munkaterületen eddig nem észleltek problémákat.",
       "tabbarDecorationsEnabled": "Problémadíszítők (diagnosztikai jelölők) megjelenítése a laprudakon.",
-      "showErrors": "Hibák megjelenítése",
-      "showWarnings": "Figyelmeztetések megjelenítése",
-      "showInfos": "Információk megjelenítése",
-      "showHints": "Tippek megjelenítése",
-      "activeFile": "Csak az aktív fájl megjelenítése",
-      "useFilesExclude": "Kizárt fájlok elrejtése",
-      "moreFilters": "További szűrők...",
-      "showingFilteredProblems": "{1}/{0} megjelenítése",
-      "filterPlaceholder": "Szűrő (pl. szöveg, **/*.ts, !**/node_modules/**)"
+      "showHints": "Tippek megjelenítése"
     },
     "memory-inspector": {
       "addressTooltip": "Megjelenítendő memóriahely, cím vagy címre kiértékelő kifejezés",
