--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -178,15 +178,7 @@
       "clearAll": "Очистить все",
       "noProblems": "Пока никаких проблем в рабочем пространстве не обнаружено.",
       "tabbarDecorationsEnabled": "Показывать декораторы проблем (диагностические маркеры) на панелях вкладок.",
-      "showErrors": "Показать ошибки",
-      "showWarnings": "Показать предупреждения",
-      "showInfos": "Показать информацию",
-      "showHints": "Показать подсказки",
-      "activeFile": "Показать только активный файл",
-      "useFilesExclude": "Скрыть исключенные файлы",
-      "moreFilters": "Дополнительные фильтры...",
-      "showingFilteredProblems": "Показано {0} из {1}",
-      "filterPlaceholder": "Фильтр (например, текст, **/*.ts, !**/node_modules/**)"
+      "showHints": "Показать подсказки"
     },
     "memory-inspector": {
       "addressTooltip": "Место в памяти для отображения, адрес или выражение, оценивающее адрес",
