--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -29,6 +29,7 @@
         "showPreviousTabInGroup": "Переход на предыдущую вкладку в группе",
         "toggleMaximized": "Переключение максимизации"
       },
+      "enhancedPreview": "Позволяет определить, следует ли отображать дополнительную информацию о вкладке в горизонтальных полосах вкладок.",
       "file": {
         "browse": "Просмотреть"
       },
@@ -52,7 +53,10 @@
         "previous": "Предыдущий (Вверх)"
       },
       "silentNotifications": "Управляет тем, следует ли подавлять всплывающие окна уведомлений.",
-      "tabMaximize": "Управляет тем, следует ли максимизировать вкладки при двойном щелчке."
+      "tabDefaultSize": "Определяет размер по умолчанию для вкладок.",
+      "tabMaximize": "Управляет тем, следует ли максимизировать вкладки при двойном щелчке.",
+      "tabMinimumSize": "Определяет минимальный размер вкладок.",
+      "tabShrinkToFit": "Сожмите вкладки, чтобы они соответствовали свободному пространству."
     },
     "debug": {
       "addConfigurationPlaceholder": "Выберите корень рабочего пространства для добавления конфигурации",
@@ -358,6 +362,7 @@
     "task": {
       "attachTask": "Прикрепите задание...",
       "clearHistory": "Чистая история",
+      "noTaskToRun": "Не найдено ни одной задачи для выполнения. Настройте задачи...",
       "openUserTasks": "Открытые задачи пользователя"
     },
     "terminal": {
